--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 《H3C网络学院系列教程 路由交换技术详解与实践（第1卷）下册》.pdf
 路由与交换技术/实验三 文件传输和设备调试.wmv
 流畅的Python.pdf
+《计算机操作系统（第4版）》学习指导与题解 (梁红兵，汤小丹编著)(OCR).pdf
+人工智能导论(第4版) (王万良) (OCR).pdf
+计算机操作系统（第四版）(OCR).pdf
+路由与交换技术/实验十二 ACL配置.wmv
+路由与交换技术/《H3C网络学院系列教程 路由交换技术详解与实践（第1卷）上册》(OCR).pdf
+路由与交换技术/《H3C网络学院系列教程 路由交换技术详解与实践（第1卷）下册》(OCR).pdf
+路由与交换技术/实验十二 ACL配置.wmv
